[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/interactibles/elevator/Elevator.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 165 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 185, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 112.5, 157 )

[node name="Elevator" type="KinematicBody2D"]
collision_layer = 0
motion/sync_to_physics = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Right" type="CollisionShape2D" parent="."]
position = Vector2( 175, -165 )
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="."]
position = Vector2( -175, -165 )
shape = SubResource( 1 )

[node name="Floor" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="Roof" type="CollisionShape2D" parent="."]
position = Vector2( 0, -340 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.5, -157 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="ElevatorControl" type="Control" parent="."]
margin_left = 185.0
margin_top = -313.0
margin_right = 280.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ElevatorControl"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ElevatorControl/MarginContainer"]
margin_right = 95.0
margin_bottom = 303.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
